[tool.poetry]
name = "repl_python3_hello-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
disputils = "^0.2.0"
Flask = "^2.0.2"
googletrans = "^3.0.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
